[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "budget"
version = "0.1.0"
description = "Personal budgeting CLI for household savings and debt optimization"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
budget = "budget.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/budget"]

[tool.pytest.ini_options]
# Make the src-layout package importable during tests without relying on the
# editable install. (uv marks its editable .pth file UF_HIDDEN, and Python
# 3.13's site.addpackage skips hidden .pth files, so the editable install is
# unreliable here. This setting is independent of that.)
pythonpath = ["src"]
testpaths = ["tests"]
